.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:07:31 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/portable/GCC/ARM_CM4F" -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/include" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'vTaskFunction2':
../Core/Src/main.c:220:1: warning: "/*" within comment [-Wcomment]
  220 | /* USER CODE END 4 */
      |  
../Core/Src/main.c:256:1: error: expected declaration or statement at end of input
  256 | }
      | ^
../Core/Src/main.c:256:1: error: expected declaration or statement at end of input
../Core/Src/main.c: At top level:
../Core/Src/main.c:247:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  247 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:230:6: warning: 'HAL_TIM_PeriodElapsedCallback' defined but not used [-Wunused-function]
  230 | void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.
17:08:44 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/portable/GCC/ARM_CM4F" -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/include" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Helloworld2.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\anton\STM32CubeIDE\My_workspace\Helloworld2\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Helloworld2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Helloworld2.elf
 
arm-none-eabi-size  Helloworld2.elf 
arm-none-eabi-objdump -h -S Helloworld2.elf  > "Helloworld2.list"
   text	   data	    bss	    dec	    hex	filename
  19932	     20	  18516	  38468	   9644	Helloworld2.elf
Finished building: default.size.stdout
 
Finished building: Helloworld2.list
 
17:09:32 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-size  Helloworld2.elf 
   text	   data	    bss	    dec	    hex	filename
  19932	     20	  18516	  38468	   9644	Helloworld2.elf
Finished building: default.size.stdout
 
17:11:49 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/portable/GCC/ARM_CM4F" -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/include" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Helloworld2.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\anton\STM32CubeIDE\My_workspace\Helloworld2\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Helloworld2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Helloworld2.elf
 
arm-none-eabi-size  Helloworld2.elf 
arm-none-eabi-objdump -h -S Helloworld2.elf  > "Helloworld2.list"
   text	   data	    bss	    dec	    hex	filename
  19932	     20	  18516	  38468	   9644	Helloworld2.elf
Finished building: default.size.stdout
 
Finished building: Helloworld2.list
 
17:15:12 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/portable/GCC/ARM_CM4F" -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/include" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Helloworld2.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\anton\STM32CubeIDE\My_workspace\Helloworld2\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Helloworld2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Helloworld2.elf
 
arm-none-eabi-size  Helloworld2.elf 
arm-none-eabi-objdump -h -S Helloworld2.elf  > "Helloworld2.list"
   text	   data	    bss	    dec	    hex	filename
  19944	     20	  18516	  38480	   9650	Helloworld2.elf
Finished building: default.size.stdout
 
Finished building: Helloworld2.list
 
17:15:57 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-size  Helloworld2.elf 
   text	   data	    bss	    dec	    hex	filename
  19944	     20	  18516	  38480	   9650	Helloworld2.elf
Finished building: default.size.stdout
 
17:16:43 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/portable/GCC/ARM_CM4F" -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/include" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Helloworld2.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\anton\STM32CubeIDE\My_workspace\Helloworld2\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Helloworld2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Helloworld2.elf
 
arm-none-eabi-size  Helloworld2.elf 
arm-none-eabi-objdump -h -S Helloworld2.elf  > "Helloworld2.list"
   text	   data	    bss	    dec	    hex	filename
  19944	     20	  18516	  38480	   9650	Helloworld2.elf
Finished building: default.size.stdout
 
Finished building: Helloworld2.list
 
17:29:49 **** Incremental Build of configuration Debug for project Helloworld2 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/portable/GCC/ARM_CM4F" -I"C:/Users/anton/STM32CubeIDE/My_workspace/Helloworld2/FreeRTOS-Kernel/include" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Helloworld2.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\anton\STM32CubeIDE\My_workspace\Helloworld2\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Helloworld2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Helloworld2.elf
 
arm-none-eabi-size  Helloworld2.elf 
arm-none-eabi-objdump -h -S Helloworld2.elf  > "Helloworld2.list"
   text	   data	    bss	    dec	    hex	filename
  20120	     20	  18516	  38656	   9700	Helloworld2.elf
Finished building: default.size.stdout
 
Finished building: Helloworld2.list
 
